# intelligent-file-assistant

./: .gitignore  IGNORE_SYSTEM.md  LICENSE  README.md  TAURI_SETUP.md  TAURI_V0.1_PLAN.md  check_scopes.py  main.py  requirements.txt  test_batch_ui.py  test_llm_classifier.py  undo_cli.py
.github/workflows/: ci.yml
actions/: __init__.py  mover.py  undo.py
agent/: __init__.py  batch.py  confidence.py  decision.py  learning.py  llm_classifier.py  matcher.py  retry_queue.py
config/: scopes.yaml  settings.yaml
features/: __init__.py  content_extractors.py  file_features.py
file-organiser/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
file-organiser/src/: constants.js  errors.js  index.html  main.js  main.test.js  onboarding.js  settings.js  state.js  storage.js  styles.css  utils.js
file-organiser/src-tauri/: Cargo.toml  tauri.conf.json
file-organiser/src-tauri/src/: classifier.rs  db.rs  lib.rs  main.rs  watcher.rs
python-prototype/: .env.example  BATCH_UI_IMPLEMENTATION.md  IMPROVEMENTS_SUMMARY.md  WORKFLOW_FIXES.md  debug_watcher.py  main.py  stats_cli.py  test_improvements.py
python-prototype/actions/: __init__.py  mover.py
python-prototype/agent/: __init__.py  decision.py  learning.py  learning_logic.py  matcher.py
python-prototype/config/: scopes.yaml  settings.py
python-prototype/storage/: state.db
python-prototype/ui/: __init__.py  batch_prompt.py  prompt.py
storage/: __init__.py  local_store.py
telemetry/: __init__.py  events.py
utils/: __init__.py  paths.py  user_input.py
watcher/: __init__.py  download_watcher.py
(+5 files in other folders)
