[package]
name = "file-organiser"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "file_organiser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1"  # File system watcher
notify-debouncer-full = "0.3"  # Debouncing for file events
reqwest = { version = "0.11", features = ["json"] }  # HTTP client for OpenAI API
tokio = { version = "1", features = ["full"] }  # Async runtime
dotenv = "0.15"  # Load .env files
base64 = "0.21"  # Base64 encoding for image data
pdf-extract = "0.7"  # Extract text from PDF files
tauri-plugin-notification = "2"  # System notifications
rusty-tesseract = "1"  # OCR text extraction from images
trash = "3"  # Send files to system recycle bin
thiserror = "1"  # Derive macro for error types
rusqlite = { version = "0.31", features = ["bundled"] }  # SQLite database
tauri-plugin-autostart = "2"  # Launch app on system startup

